--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 body {
   margin: 0;
-  background-color:#ECF9FF;
+  background-color:#EEF1FF;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
